@@ -3,6 +3,9 @@ Version 1.5.10+svn:
     * New portrait for the Javelineer.
  * Language and i18n:
    * updated translations: French, Russian 
+ * Multiplayer:
+   * server:
+     * create the fifo group accessible (instead of only user accessible)
 
 Version 1.5.10:
  * Campaigns:
@@ -34,7 +37,7 @@ Version 1.5.10:
    * Updated maps: Clash, Cynsaun Battlefield, Den of Onis, Silverhead Crossing,
      Howling Ghost Badlands, The Wilderlands, Forest of Fear
    * Removed Necrophage from the Undead Random Leader List.
-* Terrains:
+ * Terrains:
    * Enabled mixed deciduous-pine forest terrains
    * Forested hills variations now available for the deciduous forests
    * New merman village terrain variations
